[package]
name = "RustDelayLearningSNN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
threadpool = "1.8.0"
libm = "0.2.7"
round = "0.1.2"
memory-stats = "1.1.0"
serde = "1.0.193"
serde_json = "1.0.108"
chrono = "0.4.31"
plotters = "0.3.5"
slab_tree = "0.3.2"
fdg-sim = "0.9.1"
fdg-img = "0.4.2"
num_cpus = "1.0"
csv = "1"
tokio = "1.0.0"
rayon = "1.0.0"
itertools = "0.12.1"